# rich3d

./: CMakeLists.txt  GwFunction.h  GwMatrix.h  GwNewton.h  GwSolver.h  GwState.h  README.md  config.h  expl.h  matrix.h  newton.h  pca.h  picard.h  rich3d.cpp  solver.h  state.h
ex1-warrick/: input  script_plot_column.py
ex2-tracy/: analytical.py  input  script_compare_wrc.py  script_create_headbc.py  script_plot_tracy.py  script_speedup.py
nnscripts/: dataset1  dataset2  nnclassifier.py  step1_getdt.py  step2_gendata.py  step3_training.py  step4_predicting.py  step5_validating.py
p1-warrick/: input
p2-tracy/: head_bczm  input
